--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -3,73 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Model Viewer Example</title>
-  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
-  <style>
-    .progress-bar {
-      position: absolute;
-      width: 100%;
-      height: 4px;
-      background-color: rgba(255, 255, 255, 0.5);
-      visibility: hidden;
-    }
-
-    .progress-bar.hide {
-      visibility: hidden;
-    }
-
-    .update-bar {
-      height: 100%;
-      background-color: #3d85c6;
-      width: 0%;
-    }
-
-    #ar-button {
-      position: absolute;
-      bottom: 16px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 8px 16px;
-      font-size: 16px;
-      background-color: #3d85c6;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    #ar-prompt {
-      position: absolute;
-      top: 16px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-
-    #ar-prompt img {
-      width: 24px;
-      height: 24px;
-    }
-  </style>
+  <title>3D Model Viewer</title>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
 </head>
 <body>
-  <h1>Model Viewer Example</h1>
-  <model-viewer 
-  alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" 
-  src="shared-assets/models/NeilArmstrong.glb" 
-  ar environment-image="shared-assets/environments/moon_1k.hdr" 
-  poster="shared-assets/models/NeilArmstrong.webp" 
-  shadow-intensity="1" 
-  camera-controls 
-  touch-action="pan-y">
-    <div class="progress-bar hide" slot="progress-bar">
-      <div class="update-bar"></div>
-    </div>
-    <button slot="ar-button" id="ar-button">
-      View in your space
-    </button>
-    <div id="ar-prompt">
-      <img src="https://modelviewer.dev/shared-assets/icons/hand.png" alt="AR Prompt">
-    </div>
-  </model-viewer>
+  <model-viewer src ="../../public/images/bottle/bottle.gltf" camera-controls></model-viewer>
 </body>
+<style>
+  model-viewer{
+    width: 400px;
+    height: 600px;
+    margin:  0 auto;
+  }
+</style>
 </html>
